# MusicManager

./: .gitignore  README.md  alembic.ini  compose.ci.yml  compose.yml  package-lock.json  package.json  pyproject.toml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
backend/: README.md
backend/music_manager_backend/: __init__.py
backend/music_manager_backend/api/: __init__.py  app.py  container.py  dependencies.py  logging_config.py  operation_coordinator.py
backend/music_manager_backend/application/: __init__.py
backend/music_manager_backend/domain/: __init__.py
backend/music_manager_backend/ports/: __init__.py  audio_metadata.py  exporter.py  filesystem.py  (+5 more)
backend/tests/: conftest.py
docker/: backend.Dockerfile  ci.Dockerfile  frontend.Dockerfile
docs/: README.md
docs/architecture/: overview.md  tech-stack.md
docs/coding-plans/: README.md  backend-multiwave-plan.md  frontend-multiwave-plan.md  shared-library-source-of-truth-plan.md
docs/decisions/: 0001-canonical-library-and-export-deduplication.md  0002-desktop-stack.md  0003-environments-and-export-apply.md
docs/development/: scaffold.md
docs/domain/: domain-model.md  sync-and-source-of-truth.md
docs/features/: dj-metadata-and-playback.md  local-library-and-matching.md  soundcloud-ingestion.md  usb-export.md
docs/product/: mvp-scope.md  open-questions.md  vision.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md
scripts/: debug_soundcloud_playlist.py  port_manual_matches_to_library.sh  redeploy_with_backup.sh
(+202 files in other folders)
