[project]
name = "music-manager"
version = "0.1.0"
description = "Local-first DJ music library manager backend."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "tinytag>=2.1",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["backend"]
strict = true
plugins = []
