[package]
name = "music-manager"
version = "0.1.0"
description = "Music Manager desktop shell"
authors = ["Music Manager"]
edition = "2021"

[lib]
name = "music_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

